--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,45 @@
     transform: rotate(360deg);
   }
 }
+
+
+.row-header{
+  margin:0px auto;
+  padding:0px auto;
+}
+
+.row-content {
+  margin:0px auto;
+  padding: 50px 0px 50px 0px;
+  border-bottom: 1px ridge;
+  min-height:400px;
+}
+
+.footer{
+  background-color: #D1C4E9;
+  margin:0px auto;
+  padding: 20px 0px 20px 0px;
+}
+#jumbo{
+  width: 150%;
+  padding:0px;
+  margin:0px;
+  background: #9575CD ;
+  color:floralwhite;
+}
+
+#headerText{
+  padding-left: 205px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+address{
+  font-size:80%;
+  margin:0px;
+  color:#0f0f0f;
+}
+
+.navbar-dark {
+  background-color: #512DA8;
+}
